# ssce-multidispatch-playground

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  README.md  appveyor.yml  meson.build  meson_options.txt
build-aux/: artifact.py  meson.build
src/: Common.h  GccMultiVersioning.c  Greeter.cpp  Greeter.h  Greeter.hpp  meson.build
test/: greeter.c  meson.build  results.h
